src/objects/E_and_F_Account_Role_Detail__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>name of the account linked to the E&amp;F account role detail record</description>
        <formula>Account_Role__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Role__c</fullName>
        <description>Functional Role related to this account detailed role</description>
        <label>Account Role</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>E&amp;F Account Role Details</relationshipLabel>
        <relationshipName>E_F_Account_Role_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BSP__c</fullName>
        <description>BSP periods, W represent weekly periods, F for Forthnight and monthly.</description>
        <label>BSP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>W1</fullName>
                </value>
                <value>
                    <fullName>W2</fullName>
                </value>
                <value>
                    <fullName>W3</fullName>
                </value>
                <value>
                    <fullName>F1</fullName>
                </value>
                <value>
                    <fullName>F2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charges_Collected__c</fullName>
        <description>List of charges that we can apply to airlines from this client</description>
        <label>Charges Collected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Long list attached</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detailed_Account_Role__c</fullName>
        <description>Detailed account roles</description>
        <label>Detailed Account Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Role_Details</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Account_Detailed_Account_Role__c</fullName>
        <formula>AccountName__c &amp;&quot; - &quot;&amp;   TEXT(Detailed_Account_Role__c)</formula>
        <label>Account and Detailed Account Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this client chaged for &quot;Electronic fund transfers&quot; ?</description>
        <inlineHelpText>Is this client chaged for &quot;Electronic fund transfers&quot; ?</inlineHelpText>
        <label>EFT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_and_F_Client_Services_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Internal user following up on this client</description>
        <label>E&amp;F Client Services Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_and_F_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_and_F_Level__c</fullName>
        <description>Client level clasification within E&amp;F (1, for very good clients)</description>
        <label>E&amp;F Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_and_F_Status_Change_Date__c</fullName>
        <description>Status last changed for tracking purposes</description>
        <label>E&amp;F Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_and_F_Status__c</fullName>
        <description>Contract relationship with E&amp;F</description>
        <label>E&amp;F Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Role__c</fullName>
        <formula>TEXT(Account_Role__r.Functional_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Functional Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICH__c</fullName>
        <description>Which ICH period the funds should be linked to</description>
        <inlineHelpText>Which ICH period the funds should be linked to ?</inlineHelpText>
        <label>ICH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E&amp;F Account Role Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EFARD-{000000}</displayFormat>
        <label>E&amp;F Account Role Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E&amp;F Account Role Details</pluralLabel>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>used to store informations related to Client</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operator</fullName>
        <active>true</active>
        <description>used to store informations related to Operator</description>
        <label>Operator</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>